--- a/package.json
+++ b/package.json
@@ -7,17 +7,11 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "server": "ts-node --esm server/index.ts",
-    "start": "concurrently \"npm run dev\" \"npm run server\""
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "express": "^4.19.2",
-    "mysql2": "^3.10.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5"
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
@@ -30,11 +24,6 @@
     "globals": "^16.4.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.43.0",
-    "vite": "^7.1.6",
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
-    "@types/node": "^20.14.2",
-    "ts-node": "^10.9.2",
-    "concurrently": "^8.2.2"
+    "vite": "^7.1.6"
   }
 }
